<resources>
    <string name="app_name">FoodMap</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_offline_map">Offline map</string>
    <string name="nav_bookmark">Bookmark</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_tutorial">Tutorial</string>
    <string name="nav_about">About</string>
    <string name="str_name" translatable="false">Ku Hiệp</string>
    <string name="str_email" translatable="false">xuanhiep28697@gmail.com</string>
    <string name="menu_icons" translatable="false">Menu Icons</string>
    <string name="direction">Direction</string>
    <string name="get_my_location">Get my location</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="update_your_location">Update your location</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="place_name">Place name</string>
    <string name="place_type">Place type</string>
    <string name="place_address">Place address</string>
    <string name="open_time">Open time</string>
    <string name="your_favourite_location">Your favourite location</string>
    <string name="favourite_location">Favourite location</string>
    <string name="str_delete_confirm">Do you want to delete?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_deleted">Deleted</string>
    <string name="str_success">Success</string>
    <string name="str_add_favourite" >Add favourite location</string>
    <string name="str_enter_name">Enter name</string>
    <string name="str_map_loading">Map Loading...</string>
    <string name="str_please_wait">Please wait...</string>
</resources>
