<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#456ccf">

    <TextView
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="#f0f0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_your_location" />



    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/edtNewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="1"
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btnHuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>