<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <!-- NOTE: This list should be displayed in a list
    instead of nested layouts -->
    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/txtPlaceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_name"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/txtPlaceType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_type"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/ic_menu_send"
            android:tint="#737373" />

        <TextView
            android:id="@+id/txtPlaceAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place_address"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/ic_menu_slideshow"
            android:tint="#737373" />

        <TextView
            android:id="@+id/txtPlaceOpenTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_time"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageButton
            android:id="@+id/btnDirection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:src="@android:drawable/ic_menu_directions"
            android:visibility="visible"
            android:layout_weight="1"
            android:layout_margin="15dp"/>

        <ImageButton
            android:id="@+id/btnAddFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:src="@android:drawable/ic_input_add"
            android:visibility="visible"
            android:layout_weight="1"
            android:layout_margin="15dp"/>
    </LinearLayout>

</LinearLayout>